--- a/main.css
+++ b/main.css
@@ -1,141 +1,151 @@
-* 
-{
+* {
+
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-	font-family:  consolas;
+	font-family: sans-serif;
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	background: #161623; 
+	min-height: 100vh;
 }
 
 
-body { 
 
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
-background: #111;
- }
+section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#f00, #f0f);
+    clip-path: circle(30% at right 70%);
+}
 
- .container { 
+
+section::after 
+{
+	content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#2196f3, #e91e63);
+    clip-path:  circle(20% at 10% 10%);
+}
+
+.container {
+
+	position: relative;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 40px 0;
+}
+
+.container .card {
  position: relative;
+ width: 300px;
+ height: 400px;
+ background: rgb(255, 255, 255, 0.05);
+ margin: 20px;
+ box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+ border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
- padding: 40px 0;
- flex-wrap: wrap;
-  }
+ background-filter: blur(10px);
+}
+
+.container .card .content {
+
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+opacity: 0.5;
+transition: 0.5s;
+
+}
+
+.container .card:hover .content {
+ opacity: 1;
+ transform: translateY(-20px);
+}
+
+.container .card .content .imgBx {
+ position: relative;
+ width: 150px;
+ height: 150px;
+ border-radius: 50%;
+ overflow: hidden;
+ border: 10px solid rgba(0,0,0,0.25);
+}
 
 
-  .box {
+.container .card .content .imgBx img{
 
-  	position: relative;
-  	width: 320px;
-  	height: 400px;
-  	color: #fff;
-  	background: #111;
-  	display: flex;
-  	justify-content: center;
-  	align-items: center;
-  	margin: 20px 30px;
-  	transition: 0.5s;
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
 
-  }
+}
 
-  .container .box:hover {
+.container .card .content .contentBx h3 {
 
-   transform: translateY(-20px);
-  }
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: 500;
+	font-size: 18px;
+	text-align: center;
+	margin: 20px 0 10px;
+	line-height: 1.1em;
+}
 
+.container .card .content .contentBx h3 span {
 
-  .container .box::before {
-  	content: '';
-  	position: absolute;
-  	top: 0;
-  	left: 0;
-  	width: 100%;
-  	height: 100%;
-    background: linear-gradient(45deg, #ffbc00, #ff0058) ;
-  }
+	font-size: 12px;
+	font-weight: 300;
+	text-transform: initial;
+}
 
+.container .card .sci {
 
-  .container .box::after {
-  	content: '';
-  	position: absolute;
-  	top: 0;
-  	left: 0;
-  	width: 100%;
-  	height: 100%;
-    background: linear-gradient(45deg, #ffbc00, #ff0058);
-    filter: blur(30px);
-  }
+	position: absolute;
+	bottom: 50px;
+	display: flex;
+}
 
-.container .box:nth-child(2)::before, 
-.container .box:nth-child(2)::after
-  {
-  	 background: linear-gradient(315deg, #03a9f4, #ff0058);
-  }
+.container .card .sci li {
 
+	list-style: none;
+	margin: 0 10px;
+	transform: translateY(40px);
+	transition: 0.5s;
+	opacity: 0;
+	transition-delay: calc(0.1s * var(--i));
+}
 
-.container .box:nth-child(3)::before, 
-.container .box:nth-child(3)::after
-  {
-  	 background: linear-gradient(315deg, #4dff03, #00d0ff);
-  }
+.container .card:hover .sci li {
+	transform: translateY(0px);
+	opacity: 1;
+}
 
-.container .box samp
-  {
+.container .card .sci li a {
 
-  	position: absolute;
-  	top: 6px;
-  	left: 6px;
-  	right: 6px;
-  	bottom: 6px;
-  	background:  rgba(0,0,0,0.6);
-  	z-index: 2;
-  }
-
-  .container .box samp::before {
-
-  	content: '';
-  	position: absolute;
-  	top: 0;
-  	left: 0;
-  	width: 50%;
-  	height: 100%;
-  	background: rgba(255,255,255,0.1);
-  	pointer-events: none;
-  }
-
-
-  .container .box .content {
-
-  	position: relative;
-  	z-index: 10;
-  	padding: 20px 40px;
-  } 
-
-  .container .box .content h2 {
-
-  	font-size: 2em;
-  	color: #fff;
-  	margin-bottom: 10px;
-  }
-
-
-  .container .box .content p {
-
-  	font-size: 1.1em;
-  	color: #fff;
-  	margin-bottom: 10px;
-  	line-height: 1.4em;
-  }
-
-  .container .box .content a {
-
-  	display: inline-block;
-  	font-size: 1.1em;
-  	color: #111;
-  	background: #fff;
-  	padding: 10px;
-  	text-decoration: none;
-  }
+	color: white;
+	font-size: 24px;
+}
